# CollapseUpdater

./: .gitignore  Cargo.toml  README.md  build.rs  builder.py  main.py  requirements.txt
.github/workflows/: main.yml  rust.yml
src/: main.rs  rustfmt.toml
